--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.6.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-fetch": "1.3.0",
     "ember-load-initializers": "^0.5.1",
+    "ember-markdown-it": "0.0.4",
     "ember-resolver": "^2.0.3",
     "github-api": "^2.3.0",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "to-id": "^1.0.5"
   },
   "dependencies": {
     "install": "^0.7.3",
