--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-deploy": "1.0.0-beta.1",
+    "ember-cli-deploy-build": "0.1.1",
+    "ember-cli-deploy-git": "1.0.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
